<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_public"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.csci310.ParkHere.publicActivity">


        <ImageView
            android:id="@+id/Public_image"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:src="@drawable/icon"
            android:layout_marginLeft="3dip"
            android:scaleType="center"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/public_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:paddingBottom="4dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height= "wrap_content"
                android:id="@+id/ratingTextView"
                android:text="Rating: "
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:textSize="20dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.1"
                android:rating="2.0"
                android:isIndicator="true"
                android:progressTint="#FFCC00" />
        </LinearLayout>

        <TextView
            android:id="@+id/reviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reviews:"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:paddingBottom="4dp" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>


    </LinearLayout>
</ScrollView>