<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:ignore="ExtraText"
    android:background="@drawable/register">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Join Us!"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:textSize="30dp"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:hint=" What's your name?"
        android:focusable="true"
        android:textColorHint="#2945a3"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background_normal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint=" What's your email?"
        android:focusable="true"
        android:inputType="textEmailAddress"
        android:textColorHint="#2945a3"
        android:background="@android:drawable/editbox_background_normal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:focusable="true"
        android:id="@+id/passwordEditText"
        android:textColorHint="#2945a3"
        android:hint=" Super secret password"
        android:background="@android:drawable/editbox_background_normal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:focusable="true"
        android:id="@+id/confirmPasswordEditText"
        android:textColorHint="#2945a3"
        android:hint=" Confirm password"
        android:background="@android:drawable/editbox_background_normal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEditText"
        android:hint=" Phone number?"
        android:focusable="true"
        android:inputType="phone"
        android:textColorHint="#2945a3"
        android:background="@android:drawable/editbox_background_normal" />

    <ToggleButton
        android:id="@+id/togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="Host features on"
        android:textOff="Host features off"
        android:layout_gravity="center_horizontal"
        android:onClick="onToggleClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up!"
        android:layout_marginTop="50dp"
        android:id="@+id/registerButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancelButton"
        android:layout_gravity="center_horizontal" />


</LinearLayout>