...
                        android:ems="10"
                        android:layout_below="@+id/stepOne"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/stepOne"
                        android:layout_alignEnd="@+id/stepOne"
                        android:id="@+id/locationEditText"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:hint="Location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/locationEditText"
...
