...

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Host"
                android:id="@+id/viewButton" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
...
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/editButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </LinearLayout>
...
